--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@ main/dataset/dataset*
 main/dataset/saved datasets/
 
 sandbox/YOLO/yolo_tensorflow/data
+
 sandbox/YOLO/lp_implementation/data
+# !sandbox/YOLO/lp_implementation/data/lp_with_car/output_keep/
+# !sandbox/YOLO/lp_implementation/data/weights/
