--- a/sandbox/YOLOv2/keras-yolo2/config.json
+++ b/sandbox/YOLOv2/keras-yolo2/config.json
@@ -1,21 +1,21 @@
 {
     "model" : {
-        "backend":              "Full Yolo",
-        "input_size":           416,
-        "anchors":              [0.57273, 0.677385, 1.87446, 2.06253, 3.33843, 5.47434, 7.88282, 3.52778, 9.77052, 9.16828],
-        "max_box_per_image":    10,        
-        "labels":               ["kangaroo"]
+        "backend":              "Inception3",
+        "input_size":           448,
+        "anchors":              [1.05,0.87, 1.99,1.46, 2.69,2.30, 2.78,1.82, 3.77,2.83],
+        "max_box_per_image":    1,
+        "labels":               ["plate"]
     },
 
     "train": {
-        "train_image_folder":   "/home/andy/data/kangaroo/images/",
-        "train_annot_folder":   "/home/andy/data/kangaroo/annots/",     
+        "train_image_folder":   "data/converted_dataset/train/jpeg/",
+        "train_annot_folder":   "data/converted_dataset/train/xml/",
           
         "train_times":          8,
-        "pretrained_weights":   "full_yolo_kangaroo3.h5",
+        "pretrained_weights":   "",
         "batch_size":           16,
         "learning_rate":        1e-4,
-        "nb_epochs":            1,
+        "nb_epochs":            50,
         "warmup_epochs":        3,
 
         "object_scale":         5.0 ,
@@ -23,7 +23,7 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "full_yolo_kangaroo.h5",
+        "saved_weights_name":   "inception_yolo.h5",
         "debug":                true
     },
 
