--- a/sandbox/YOLOv2/keras-yolo2/config.json
+++ b/sandbox/YOLOv2/keras-yolo2/config.json
@@ -12,7 +12,7 @@
         "train_annot_folder":   "data/converted_dataset/train/xml/",
           
         "train_times":          8,
-        "pretrained_weights":   "",
+        "pretrained_weights":   "inception_yolo.h5",
         "batch_size":           16,
         "learning_rate":        1e-4,
         "nb_epochs":            50,
