--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ main/dataset/dataset*
 main/dataset/saved datasets/
 
 sandbox/*/*/data
+sandbox/*/*/logs
 ! sandbox/YOLOv2/keras-yolo2/data/convert_dataset.py
 *.h5
