Retrained YOLOv2 on entire training set

--- a/sandbox/YOLOv2/keras-yolo2/config_lp_seg.json
+++ b/sandbox/YOLOv2/keras-yolo2/config_lp_seg.json
@@ -28,8 +28,8 @@
     },
 
     "valid": {
-        "valid_image_folder":   "",
-        "valid_annot_folder":   "",
+        "valid_image_folder":   "data/converted_dataset/test/jpeg/",
+        "valid_annot_folder":   "data/converted_dataset/test/xml/",
 
         "valid_times":          1
     }
