Adding thresholding function

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ main/dataset/saved datasets/
 
 sandbox/*/*/data
 sandbox/*/*/logs
-! sandbox/YOLOv2/keras-yolo2/data/convert_dataset.py
+! sandbox/YOLOv2/keras-yolo2/data/*.py
 *.h5
