--- a/sandbox/YOLOv2/keras-yolo2/config_char_seg.json
+++ b/sandbox/YOLOv2/keras-yolo2/config_char_seg.json
@@ -2,15 +2,15 @@
     "model" : {
         "backend":              "Inception3",
         "input_size":           448,
-        "anchors":              [1.05,0.87, 1.99,1.46, 2.69,2.30, 2.78,1.82, 3.77,2.83],
+        "anchors":              [1.33,7.87, 1.45,10.30, 1.47,9.18, 1.54,7.91, 1.72,6.51],
         "max_box_per_image":    1,
-        "labels":               ["plate"]
+        "labels":               ["A", "B", "C", "D", "E", "F", "G", "H", "J", "K", "L", "M", "N", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"]
     },
 
     "train": {
-        "train_image_folder":   "data/converted_dataset/train/jpeg/",
-        "train_annot_folder":   "data/converted_dataset/train/xml/",
-          
+        "train_image_folder":   "data/lp_candidates/train/jpeg/",
+        "train_annot_folder":   "data/lp_candidates/train/xml/",
+
         "train_times":          8,
         "pretrained_weights":   "",
         "batch_size":           16,
@@ -23,13 +23,13 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "lp_seg_inception.h5",
+        "saved_weights_name":   "lp_char_inception.h5",
         "debug":                false
     },
 
     "valid": {
-        "valid_image_folder":   "data/converted_dataset/test/jpeg/",
-        "valid_annot_folder":   "data/converted_dataset/test/xml/",
+        "valid_image_folder":   "",
+        "valid_annot_folder":   "",
 
         "valid_times":          1
     }
