--- a/sandbox/YOLOv2/keras-yolo2/config_lp_seg_mobilenet.json
+++ b/sandbox/YOLOv2/keras-yolo2/config_lp_seg_mobilenet.json
@@ -12,18 +12,18 @@
         "train_annot_folder":   "data/converted_dataset/train/xml/",
           
         "train_times":          8,
-        "pretrained_weights":   "",
+        "pretrained_weights":   "lp_seg_mobilenet_tmp.h5",
         "batch_size":           16,
         "learning_rate":        1e-4,
-        "nb_epochs":            50,
-        "warmup_epochs":        3,
+        "nb_epochs":            1,
+        "warmup_epochs":        0,
 
         "object_scale":         5.0,
         "no_object_scale":      1.0,
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "lp_seg_mobilenet.h5",
+        "saved_weights_name":   "lp_seg_mobilenet_tmp.h5",
         "debug":                false
     },
 
