--- a/sandbox/YOLOv2/keras-yolo2/config_lp_seg_mobilenet.json
+++ b/sandbox/YOLOv2/keras-yolo2/config_lp_seg_mobilenet.json
@@ -12,8 +12,8 @@
         "train_annot_folder":   "data/converted_dataset/train/xml/",
           
         "train_times":          8,
-        "pretrained_weights":   "lp_seg_mobilenet_tmp.h5",
-        "batch_size":           16,
+        "pretrained_weights":   "lp_seg_mobilenet.h5",
+        "batch_size":           20,
         "learning_rate":        1e-4,
         "nb_epochs":            1,
         "warmup_epochs":        0,
@@ -23,8 +23,10 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "lp_seg_mobilenet_tmp.h5",
-        "debug":                false
+        "saved_weights_name":   "lp_seg_mobilenet_unpruned.h5",
+        "pruned_weights_name":   "lp_seg_mobilenet_pruned.h5",
+        "debug":                false,
+        "verbose":              false
     },
 
     "valid": {
