--- a/main/LP_segmentation/config_lp_seg_mobilenet.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet.json
@@ -23,8 +23,8 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "pruned_models/mobilenet_8it_20p/lp_seg_mobilenet_last_unpruned",
-        "pruned_weights_name":  "pruned_models/mobilenet_8it_20p/lp_seg_mobilenet_pruned",
+        "saved_weights_name":   "lp_seg_mobilenet_pruned_post-train",
+        "pruned_weights_name":  "lp_seg_mobilenet_pruned",
         "debug":                false,
         "verbose":              false
     },
