--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 
 main/dataset/dataset*
 main/dataset/saved datasets/
+main/LP_segmentation/logs/
 
 sandbox/*/*/data
 sandbox/*/*/logs
