--- a/main/LP_segmentation/config_lp_seg_mobilenet_train.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_train.json
@@ -8,6 +8,7 @@
     },
 
     "train": {
+        "prune_network":        false,
         "train_image_folder":   "data/converted_dataset/train/jpeg/",
         "train_annot_folder":   "data/converted_dataset/train/xml/",
           
@@ -24,8 +25,7 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "lp_seg_mobilenet_pruned_post-train",
-        "pruned_weights_name":  "lp_seg_mobilenet_pruned",
+        "saved_weights_name":   "lp_seg_mobilenet_trained.h5",
         "debug":                false,
         "verbose":              false
     },
