Adding prune threshold to config param

--- a/main/LP_segmentation/config_lp_seg_mobilenet_train.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_train.json
@@ -8,6 +8,7 @@
     },
 
     "train": {
+        "prune_threshold":      0.20,
         "prune_network":        false,
         "train_image_folder":   "data/converted_dataset/train/jpeg/",
         "train_annot_folder":   "data/converted_dataset/train/xml/",
