--- a/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
@@ -8,17 +8,18 @@
     },
 
     "train": {
-        "prune_threshold":      0.20,
+        "prune_threshold":      0.01,
         "prune_network":        true,
         "train_image_folder":   "data/converted_dataset/train/jpeg/",
         "train_annot_folder":   "data/converted_dataset/train/xml/",
+        "skip_first_train":     true,
           
-        "train_times":          5,
-        "previous_iterations":  12,
-        "pretrained_weights":   "lp_seg_mobilenet_trained.h5",
-        "batch_size":           24,
+        "train_times":          10,
+        "previous_iterations":  25,
+        "pretrained_weights":   "pruned_models/mobilenet_25it_1p_1/lp_seg_mobilenet_pruned_post-train_it25.h5",
+        "batch_size":           16,
         "learning_rate":        1e-4,
-        "nb_epochs":            1,
+        "nb_epochs":            10,
         "warmup_epochs":        0,
 
         "object_scale":         5.0,
