--- a/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
@@ -27,18 +27,19 @@
         "coord_scale":          1.0,
         "class_scale":          1.0,
 
-        "saved_weights_name":   "lp_seg_mobilenet_trained_test.h5",
+        "saved_weights_name":   "lp_seg_mobilenet_quant_post-train",
         "debug":                false,
         "verbose":              false
     },
 
     "quant": {
+        "weights_name":         "lp_seg_mobilenet_quant",
         "train_dir":            "pruned_models/converted_checkpoint",
-        "pretrained_weights":   "pruned_models/mobilenet_10it_20p_1/lp_seg_mobilenet_pruned_it9.h5",
         "meta":                 "lp_seg_mobilenet_pruned_post-train_it25.ckpt.meta",
         "ckpt":                 "lp_seg_mobilenet_pruned_post-train_it25.ckpt",
         "quantized_model":      "model_pruned_trained_quant.ckpt",
-        "quant_dir":            "./quant_models/"
+        "quant_dir":            "./quant_models/",
+        "verbose":              false
     },
 
     "valid": {
