--- a/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
@@ -8,16 +8,13 @@
     },
 
     "train": {
-        "prune_threshold":      0.20,
-        "prune_network":        false,
         "train_image_folder":   "data/converted_dataset/train/jpeg/",
         "train_annot_folder":   "data/converted_dataset/train/xml/",
         "skip_first_train":     true,
           
         "train_times":          5,
-        "previous_iterations":  10,
-        "pretrained_weights":   "pruned_models/mobilenet_10it_20p_1/lp_seg_mobilenet_pruned_it9.h5",
-        "batch_size":           24,
+        "pretrained_weights":   "pruned_models/mobilenet_25it_1p_1/lp_seg_mobilenet_pruned_post-train_it25.h5",
+        "batch_size":           16,
         "learning_rate":        1e-4,
         "nb_epochs":            10,
         "warmup_epochs":        0,
@@ -34,12 +31,7 @@
 
     "quant": {
         "weights_name":         "lp_seg_mobilenet_quant",
-        "train_dir":            "pruned_models/converted_checkpoint",
-        "meta":                 "lp_seg_mobilenet_pruned_post-train_it25.ckpt.meta",
-        "ckpt":                 "lp_seg_mobilenet_pruned_post-train_it25.ckpt",
-        "quantized_model":      "model_pruned_trained_quant.ckpt",
-        "quant_dir":            "./quant_models/",
-        "verbose":              false
+        "quant_dir":            "./quant_models/"
     },
 
     "valid": {
