--- a/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
@@ -14,7 +14,7 @@
           
         "train_times":          5,
         "pretrained_weights":   "pruned_models/mobilenet_25it_1p_1/lp_seg_mobilenet_pruned_post-train_it25.h5",
-        "batch_size":           24,
+        "batch_size":           16,
         "learning_rate":        1e-4,
         "nb_epochs":            5,
         "warmup_epochs":        0,
@@ -31,7 +31,8 @@
 
     "quant": {
         "weights_name":         "lp_seg_mobilenet_quant",
-        "quant_dir":            "./quant_models/"
+        "quant_dir":            "./quant_models/",
+        "verbose":              false
     },
 
     "valid": {
