--- a/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
@@ -38,5 +38,12 @@
         "valid_annot_folder":   "data/converted_dataset/test/xml/",
 
         "valid_times":          1
+    },
+
+    "predict": {
+        "input":                "data/converted_dataset/test",
+        "output_folder":        "prune",
+        "crop":                 false,
+        "pretrained_weights":   "pruned_models/mobilenet_25it_1p_1/lp_seg_mobilenet_pruned_post-train_it25.h5"
     }
 }
