--- a/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_prune.json
@@ -29,6 +29,10 @@
         "verbose":              false
     },
 
+    "convert": {
+        "convert_dir":          "./pruned_models/"
+    },
+
     "prune": {
         "prune_threshold":      0.01,
         "prune_network":        true,
