--- a/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_quant.json
@@ -13,7 +13,7 @@
         "skip_first_train":     true,
           
         "train_times":          5,
-        "pretrained_weights":   "quant_models/mobilenet_5it_q_2/lp_seg_mobilenet_quant_it1.h5",
+        "pretrained_weights":   "quant_models/mobilenet_5it_q_3/lp_seg_mobilenet_quant_it2.h5",
         "batch_size":           16,
         "learning_rate":        1e-4,
         "nb_epochs":            5,
@@ -27,6 +27,10 @@
         "saved_weights_name":   "lp_seg_mobilenet_quant_post-train",
         "debug":                false,
         "verbose":              false
+    },
+
+    "convert": {
+        "convert_dir":          "./quant_models/"
     },
 
     "quant": {
