--- a/main/LP_segmentation/config_lp_seg_mobilenet_train.json
+++ b/main/LP_segmentation/config_lp_seg_mobilenet_train.json
@@ -29,6 +29,10 @@
         "verbose":              false
     },
 
+    "convert": {
+        "convert_dir":          "./trained_models/"
+    },
+
     "prune": {
         "prune_network":        false
     },
