Working huffman example.

--- a/main/Huffman/config_encode_yolo.json
+++ b/main/Huffman/config_encode_yolo.json
@@ -7,6 +7,6 @@
     },
 
     "convert": {
-        "convert_dir":          "./quant_models/"
+        "convert_dir":          "../LP_segmentation/quant_models/"
     }
 }
