--- a/main/Encoding/config_encode_yolo.json
+++ b/main/Encoding/config_encode_yolo.json
@@ -1,26 +1,6 @@
 {
-    "huffman": {
-        "input_checkpoint":     "lp_seg_mobilenet_quant_it2",
-        "encoded_name":         "encoded_mobilenet_quant_it2",
-        "white_regex":          ["CustomAdam", "training", "loss", "moving_mean", "moving_variance"],
-        "verbose":              true
-    },
-
-    "lempel-ziv": {
-        "input_checkpoint":     "lp_seg_mobilenet_quant_it2",
-        "encoded_name":         "encoded_mobilenet_quant_it2",
-        "white_regex":          ["CustomAdam", "training", "loss", "moving_mean", "moving_variance"],
-        "verbose":              true
-    },
-
-    "lz_huff": {
-        "input_checkpoint":     "lp_seg_mobilenet_quant_it2",
-        "encoded_name":         "encoded_mobilenet_quant_it2",
-        "white_regex":          ["CustomAdam", "training", "loss", "moving_mean", "moving_variance"],
-        "verbose":              true
-    },
-
-    "convert": {
-        "convert_dir":          "../LP_segmentation/quant_models/"
-    }
+    "input_checkpoint":     "lp_seg_mobilenet_quant_it2",
+    "checkpoint_dir":       "../LP_segmentation/quant_models/converted_checkpoint",
+    "black_list":           ["CustomAdam", "training", "loss", "moving_mean", "moving_variance"],
+    "verbose":              true
 }
